--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>3.1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.example</groupId>
             <artifactId>memoryCommen</artifactId>
             <version>0.0.1-SNAPSHOT</version>
