--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,3 +96,14 @@ memory-api:
     access-key: memory
     secret-key: 12345678
 
+
+dubbo:
+  application:
+    name: dubbo-springboot-demo-provider
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    id: nacos-registry
+    address: nacos://localhost:8848
+
