--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 # 公共配置文件
 # @author <a href="https://github.com/liyupi">程序员鱼皮</a>
 # @from <a href="https://yupi.icu">编程导航知识星球</a>
+server:
+  address: 0.0.0.0
+  port: 8101
+  servlet:
+    context-path: /api
+    # cookie 30 天过期
+#    session:
+#      cookie:
+#        max-age: 2592000
 spring:
   application:
     name: memory-api
@@ -24,14 +33,14 @@ spring:
     url: jdbc:mysql://localhost:3306/memory_api
     username: root
     password: Dw990831
-  # Redis 配置
-  # todo 需替换配置，然后取消注释
-  #  redis:
-  #    database: 1
-  #    host: localhost
-  #    port: 6379
-  #    timeout: 5000
-  #    password: 123456
+    # Redis 配置
+    # todo 需替换配置，然后取消注释
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+    timeout: 5000
+    password: Dw990831
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
   #  elasticsearch:
@@ -43,15 +52,7 @@ spring:
     multipart:
       # 大小限制
       max-file-size: 10MB
-server:
-  address: 0.0.0.0
-  port: 8101
-  servlet:
-    context-path: /api
-    # cookie 30 天过期
-    session:
-      cookie:
-        max-age: 2592000
+
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
@@ -96,7 +97,6 @@ memory-api:
     access-key: memory
     secret-key: 12345678
 
-<<<<<<< HEAD
 
 dubbo:
   application:
@@ -108,5 +108,3 @@ dubbo:
     id: nacos-registry
     address: nacos://localhost:8848
 
-=======
->>>>>>> e32758e (重构 抽取公共服务)
