--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.21.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
             <version>3.1.8</version>
@@ -36,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>com.memory</groupId>
-            <artifactId>memory-client-sdk</artifactId>
+            <artifactId>memory-client-spring-boot-starter</artifactId>
             <version>0.0.1</version>
         </dependency>
         <dependency>
